--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Input Demo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <h3> Ussing CSS to Style HTML From</h3>
+    <section>
+        <form action="#">
+            <!-- # 代表当前路径 -->
+
+            <!-- first name -->
+            <label for="fname">First Name</label>
+            <input type="text" name="firstName" id="fname" placeholder="Your first name...">
+            <!-- first name -->
+            <label for="lname">Last Name</label>
+            <input type="text" name="firstName" id="lname" placeholder="Your last name...">
+
+            <!-- country selection -->
+            <label for="country">Country</label>
+            <select name="country" id="country">
+                <option value="aus - 1">Australia</option>
+                <option value="chn - 2">China</option>
+                <option value="USA - 3">USA</option>
+                <option value="CND - 4">Canada</option>
+            </select>
+
+            <!-- multi slection -->
+            <label for="apple">Apple</label>
+            <input type="checkbox" name="apple" id="apple">
+            <label for="banana">Banana</label>
+            <input type="checkbox" name="Banana" id="banana">
+
+            <!-- single section -->
+            <label for="female">Female</label>
+            <input type="radio" name="gender" id="female">
+            <label for="male">Male</label>
+            <input type="radio" name="gender" id="male">
+
+            <!-- password -->
+            <br>
+            <label for="pwd">Password</label>
+            <input type="password" name="mypassword" id="pwd" placeholder="Your password...">
+
+            <!-- submit button -->
+            <input type="Submit" value="submit">
+        </form>
+    </section>
 </body>
+
 </html>
